folders deleting (with records), placeholders for empty lists added, mark editing(delete and renaming) in listener added

--- a/app/src/main/res/drawable/gradient_hydrogen.xml
+++ b/app/src/main/res/drawable/gradient_hydrogen.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <gradient
         android:angle="0"
-        android:endColor="#ffffb0"
-        android:startColor="#ffffb0" />
+        android:endColor="#667db6"
+        android:startColor="#0082c8" />
 </shape>
 
