--- a/app/src/main/res/layout/fragment_lecture_list.xml
+++ b/app/src/main/res/layout/fragment_lecture_list.xml
@@ -15,6 +15,13 @@
         android:scrollbarStyle="outsideOverlay"
         android:scrollbars="vertical" />
 
+    <include
+        layout="@layout/explanation_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone" />
+
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
